Install a plugin for org.kde.plasma.plasmoid

Allows tooling to introspect what the module does.

This used to be done through DeclarativeAppletScript, which limited the
possibilities of our tooling.

BUG: 454062